# automation-khs

./: .env.example  .gitignore  README.md  config.json  pyproject.toml  requirements.txt
automation_khs/: proto.py
src/: app.py  helper.py  proto.py  scrapper.py
tests/: scrapper_test.py
