[tool.poetry]
name = "automation-khs"
version = "0.1.0"
description = ""
authors = ["elskow <elskow@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.16.0"
python-dotenv = "^1.0.0"
webdriver-manager = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
